# Flat_Price_Prediction

./: .gitignore  API_CHECK_SUMMARY.txt  API_ENDPOINTS_DOCUMENTATION.txt  COMPLETE_TESTING_REPORT.txt  EDA_SUMMARY.txt  FINAL_TESTING_REPORT.txt  POWERSHELL_SCRIPTS_GUIDE.txt  PROJECT_COMPLETION.txt  PROJECT_STRUCTURE.md  README.md  REORGANIZATION_SUMMARY.txt  STRUCTURE_GUIDE.txt  TESTING_REPORT.txt  api_error.txt  api_output.txt  api_test_client.py  eda_analysis.py  evaluate.py  predict.py  predict_example.py  prediction_debug.txt  pyproject.toml  requirements.txt  run_api.ps1  run_model.ps1  run_quick_test.py  setup.py  start_project.ps1  test_api_endpoints.py  train.py  train_streamlined.py
api/: app.py  test_api_quick.py  test_client.py
backend/: .env.example  .gitignore  package.json  test-ai-integration.js
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
models/: catboost_model.pkl  ensemble_weights.pkl  feature_cols.pkl  label_encoders.pkl  lightgbm_model.pkl  linear_regression_model.pkl  model_metadata.json  sample.py  training_metadata.json  xgboost_model.pkl
report/: Task_F_Conclusion.md  architecture_diagrams.puml
results/: catboost_predictions.csv  model_comparison.csv  xgboost_predictions.csv
scripts/: eda_analysis.py  evaluate.py  predict.py  train.py
src/: __init__.py  config.py  evaluation.py  preprocessing.py  training.py  utils.py
tests/: test_model.py
utils/: accuracy_finder.py  accuracy_report.py
(+85 files in other folders)
